--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "validator": "0.4.x",
     "object-additions": ">= 0.5.0",
-    "async": "~0.2.9"
+    "async": "0.2.9"
   },
   "peerDependencies": {
     "express": "3.x"
